# gamelauncher

./: .gitignore  LICENSE  README.md  gamelauncher.sln  pyproject.toml
.github/workflows/: build-and-release.yml  codeql.yml
ConsoleApp/: ConsoleApp.csproj
ConsoleApp/src/: Arguments.cs  ErrorHandler.cs  Platform.cs  PowerManagement.cs  ProcessManager.cs  Program.cs  ProgramInfo.cs  Regex.cs
Gamelauncher.Core/: Gamelauncher.Core.csproj
Gamelauncher.Core/src/: Arguments.cs  Platform.cs  PowerManagement.cs  ProcessManager.cs  ProgramInfo.cs  Regex.cs
scripts/: build-clean.bat  build.bat  cleanup.bat  compile-installer-cleanup.bat  compile-installer.bat  download-installer-script.ps1  publish-cleanup.bat  publish.bat
src/gamelauncher/: args.py  init.py  platform.py  power_management.py  process.py  regex.py
