[project]
name = "gamelauncher"
version = "0.1.3"
description = "Simple launcher for Windows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pywin32"
]
license = "GPL-3.0-or-later"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
]

[project.scripts]
gamelauncher = "gamelauncher.init:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
